# rust-todo-app

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.sqlx/: query-0beb6b589f4b4e1e88497c5f0f75fb98a79cd6ba7a57e526f951556b5d8d5767.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-2bf7faebad5a9f0c43f250ced395432b4403f63c00c53eefc23e8c2631f76ac8.json  query-2eaac0b1b8f9d21fa5874839e9cc7b11946e5c59491e7df37d2566ec2de30d77.json  query-3e4e5c4be44ef130a6e886ed815bdf3e8d3d3f61e17713aa10f9912522cd84ca.json  query-695ae76d08b8f564d41501e31a86d54e295bcf8f90e2d234d5c5a773a864ccb6.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-870658499cd658a5b356a67e38e3715b468b5d3c1c60f9a9f93a6644c7fb7e51.json  query-9a60ae96398dc07faf7360c43ffdbae23577151585dfea78e60dc4f72a49288b.json  query-ad00045115e98f24ba9e462f4641fd7e5dc79ca85e3fced4b9db16c2b1cfbfe2.json  query-b5d9a98bb0d4c3ac1d6750dd509be14c91a82678f1081f5a20fd9d6aa325a785.json  query-ba74e19437bf88f2fb2e5bcd723e9369d72bb9ac927a0172d9c39061a1575f0b.json  query-be957f87b0d448e1aa2ec38def79daad1a555c3f569b8a6a5e696ffeebd63eef.json  query-eda74756e63c4220d4fb314b70d1f37181949473e9a0795e3a0c5ee09b928369.json  query-ef03e49b8182cb1a2b7de11647c83ca386f9689aa00136a51cb12def4e40ecdb.json
migrations/: 20240305030610_users.sql  20240306025756_todos.sql  20240307042437_roles.sql  20240307042605_user_role.sql
postman/: Rust Todo App.postman_collection.json
src/: main.rs
src/auth/: auth_controller.rs  auth_repository.rs  auth_service.rs  mod.rs
(+34 files in other folders)
