[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
validator = { version = "0.16", features = ["derive"] }
futures = "0.3.30"
regex = "1.10.3"
lazy_static = "1.4.0"
env_logger = "0.11.2"
dotenv = "0.15.0"
